dnl Process this file with autoconf to produce a configure script

AC_INIT(configure.in)

AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(gd, 1.6.3)

AC_PROG_CC
AC_ISC_POSIX
AM_PROG_LIBTOOL
AC_PROG_INSTALL

dnl Set LDFLAGS and CPPFLAGS so that AC_CHECK_LIBS can find installed libs in --prefix dir
LDFLAGS="$LDFLAGS -L$libdir"
CPPFLAGS="$CPPFLAGS -I$includedir"

dnl Sometimes math libs are in libc, so no warning if libm not found
AC_CHECK_LIB(m,main)

dnl The libraries libz and libpng are required.
AC_CHECK_LIB(z,main,,AC_MSG_ERROR(libz not found.))
AC_CHECK_LIB(png,main,,AC_MSG_ERROR(libpng not found.))

dnl The libraries libttf is optional.
AC_CHECK_LIB(ttf,main,,AC_MSG_WARN(libgd will be built without support for TrueType fonts.))

AC_OUTPUT(Makefile)
